Added new features
