# cmd/main.go
@@ -6,7 +6,7 @@ import (
 	"time"
 
 	"supermarket-catalogue/internal/handlers"
-	"supermarket-catalogue/internal/middleware"
+	// "supermarket-catalogue/internal/middleware"
 	"supermarket-catalogue/internal/repository"
 
 	_ "supermarket-catalogue/docs"
@@ -33,15 +33,18 @@ func main() {
 
 	r := mux.NewRouter()
 
-	r.Use(middleware.LoggingMiddleware)
+	// r.Use(middleware.LoggingMiddleware)
 
 	r.HandleFunc("/products", handlers.GetProducts).Methods("GET")
 	r.HandleFunc("/products", handlers.CreateProduct).Methods("POST")
+	r.HandleFunc("/products/compare/{barcode}", handlers.CompareByBarcode).Methods("GET")
 	r.HandleFunc("/products/{id}", handlers.GetProductByID).Methods("GET")
 	r.HandleFunc("/products/{id}", handlers.UpdateProduct).Methods("PUT")
 	r.HandleFunc("/products/{id}", handlers.DeleteProduct).Methods("DELETE")
 	r.HandleFunc("/health", handlers.HealthCheck).Methods("GET")
 	r.HandleFunc("/users", handlers.GetUsersHandler).Methods("GET")
+	r.HandleFunc("/basket/compare", handlers.CompareBasket).Methods("POST")
+	r.HandleFunc("/supermarkets/stats", handlers.GetSupermarketStats).Methods("GET")
 
 	r.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"),
